--- a/delivery/templates/index.html
+++ b/delivery/templates/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2>hello</h2>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <h1>{{ title }}</h1>
+    <ul>
+        {% for p in products %}
+            <h2>{{ p.name }}</h2>
+            {% if p.image %}
+                <p><img class="img-article" src="{{ p.image.url }}" style="width: 300px"></p>
+            {% endif %}
+            <li>
+                <p>Цена: {{ p.price }}</p>
+                <hr>
+                <div class="clear"></div>
+                <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Информация о товаре</a></p>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
