--- a/delivery/templates/index.html
+++ b/delivery/templates/index.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+    <form action="" method="get">
+        {{form.as_p}}
+        <input type="submit" value="Поиск">
+    </form>
     <h1>{{ title }}</h1>
-    <ul>
+
         {% for p in products %}
             <h2>{{ p.name }}</h2>
             {% if p.image %}
@@ -14,5 +18,5 @@
                 <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Информация о товаре</a></p>
             </li>
         {% endfor %}
-    </ul>
+
 {% endblock %}
